// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SuggestionComponent Should display the suggestion and use the provided ariaId 1`] = `
<div
  aria-selected={false}
  className="osdTypeahead__item"
  data-test-subj="autocompleteSuggestion-value-as-promised,-not-helpful"
  id="suggestion-1"
  onClick={[Function]}
  onMouseEnter={[Function]}
  role="option"
>
  <div
    className="osdSuggestionItem osdSuggestionItem--value"
  >
    <div
      className="osdSuggestionItem__type"
    >
      <EuiIcon
        type="kqlValue"
      />
    </div>
    <div
      className="osdSuggestionItem__text"
      data-test-subj="autoCompleteSuggestionText"
    >
      as promised, not helpful
    </div>
    <div
      className="osdSuggestionItem__description"
    >
      This is not a helpful suggestion
    </div>
  </div>
</div>
`;

exports[`SuggestionComponent Should make the element active if the selected prop is true 1`] = `
<div
  aria-selected={true}
  className="osdTypeahead__item active"
  data-test-subj="autocompleteSuggestion-value-as-promised,-not-helpful"
  id="suggestion-1"
  onClick={[Function]}
  onMouseEnter={[Function]}
  role="option"
>
  <div
    className="osdSuggestionItem osdSuggestionItem--value"
  >
    <div
      className="osdSuggestionItem__type"
    >
      <EuiIcon
        type="kqlValue"
      />
    </div>
    <div
      className="osdSuggestionItem__text"
      data-test-subj="autoCompleteSuggestionText"
    >
      as promised, not helpful
    </div>
    <div
      className="osdSuggestionItem__description"
    >
      This is not a helpful suggestion
    </div>
  </div>
</div>
`;
